changed image url

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Harry Potter Fan Site" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://determined-gates-60a776.netlify.app" />
-  <meta property="og:image" content="https://search.creativecommons.org/photos/970b725f-14b0-4e7e-9e0a-563de7d9637e" />
+  <meta property="og:image" content="https://live.staticflickr.com/8022/7351780252_68d8a2d82d_b.jpg" />
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
