--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="eng">
 
 <head>
-  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <!-- <meta http-equiv="content-type" content="text/html; charset=UTF-8"> -->
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
 
+  <meta name="description" content="A site for Harry Potter fans"
   <meta property="og:title" content="Harry Potter Fan Site" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://determined-gates-60a776.netlify.app" />
