--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
 
-  <meta name="description" content="A site for Harry Potter fans"
+  <meta name="description" content="A site for Harry Potter fans">
   <meta property="og:title" content="Harry Potter Fan Site" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://determined-gates-60a776.netlify.app" />
